# signal-space-py

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: typing-policy.md
src/signal_space/: __init__.py  core.py
tests/: test_fixtures.py
